MyDev/src/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeSlot__c</fullName>
        <label>TimeSlot</label>
        <type>Date</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>